Closed
Bug 1629284
Opened 6 years ago
Closed 6 years ago
Crash in [@ nsGlobalWindowInner::UpdateParentTarget]
Categories
(Core :: DOM: Core & HTML, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla77
People
(Reporter: sefeng211, Assigned: smaug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
This bug is for crash report bp-fde70674-6b99-408e-a1ae-88c550200408.
Top 10 frames of crashing thread:
0 libxul.so nsGlobalWindowInner::UpdateParentTarget dom/base/nsGlobalWindowInner.cpp:1801
1 libxul.so mozilla::EventDispatcher::Dispatch dom/base/nsPIDOMWindow.h:358
2 libxul.so nsINode::DispatchEvent dom/base/nsINode.cpp:1259
3 libxul.so mozilla::dom::EventTarget::DispatchEvent dom/events/EventTarget.cpp:178
4 libxul.so mozilla::AsyncEventDispatcher::Run dom/events/AsyncEventDispatcher.cpp:69
5 libxul.so mozilla::SchedulerGroup::Runnable::Run xpcom/threads/SchedulerGroup.cpp:282
6 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1220
7 libxul.so <name omitted> xpcom/threads/nsThreadUtils.cpp:486
8 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:87
9 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:290
| Assignee | ||
Comment 1•6 years ago
•
|
||
Null+offset.
I guess mParentTarget should be just null if outerwindow is null.
https://hg.mozilla.org/releases/mozilla-release/annotate/c6e493873ba543907dadabb42b64208a3679d43d/dom/base/nsGlobalWindowInner.cpp#l1801
| Assignee | ||
Comment 2•6 years ago
|
||
This looks old, there are crash reports from FF60 for example.
| Assignee | ||
Updated•6 years ago
|
Assignee: nobody → bugs
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
Priority: -- → P2
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6b98dddd0533
null check outer window before using it, r=edgar
Comment 5•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox77:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Updated•6 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•