Bug 1629284 - null check outer window before using it, r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D70867

--HG--
extra : moz-landing-system : lando